--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "node example.js"
+    "example": "node example.js",
+    "diff-lint": "make diff-lint",
+    "lint": "jshint .",
+    "validate": "npm ls"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +21,10 @@
     "waliyun": "^3.1.3"
   },
   "devDependencies": {
-    "eslint": "^4.14.0"
-  }
+    "eslint": "^4.14.0",
+    "precommit-hook": "^3.0.0"
+  },
+  "pre-commit": [
+    "diff-lint"
+  ]
 }
